# mahidol-datascience-annn-project1

./: Cargo.toml  README.md
data/: API_AG.LND.FRST.ZS_DS2_en_csv_v2_3630712.csv  API_EN.ATM.CO2E.PC_DS2_en_csv_v2_3638608.csv  API_EN.ATM.PM25.MC.M3_DS2_en_csv_v2_3681254.csv
src/: filters.rs  main.rs
